--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -1,8 +1,9 @@
-<h1>admin::members#edit</h1>
 <h4><%= @member.last_name %><%= @member.first_name %>さんの会員情報編集</h4>
- <%= form_for(@member, url:admin_member_path, method: :patch) do |f| %>
+
+<%= form_for(@member, url:admin_member_path, method: :patch) do |f| %>
 <table>
     <tbody>
+
         <tr>
         <th>会員ID</th>
         <td><%= @member.id %></td>
@@ -51,7 +52,7 @@
         </tr>
 
         <tr>
-        <th><%= f.submit '変更を保存する' %></th>
+        <th><%= f.submit '変更を保存する', class: "btn btn-primary" %></th>
         </tr>
     </tbody>
 </table>
