--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -1,48 +1,51 @@
-<h1>admin::members#show</h1>
 <h3><%= @member.last_name%> <%= @member.first_name%> さんの会員詳細</h3>
+<div class="col-xs-12">
     <table>
-            <thead></thead>
-            <tbody>
-                <tr>
-                    <td>顧客ID</td>
-                    <td> <%= @member.id %>
-                        <div class="btn btn-default">
-                            <% if @member.is_deleted == false %>
-                                有効
-                            <% else %>
-                                退会済み
-                            <% end %>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>氏名</td>
-                    <td><%= "#{@member.last_name}　#{@member.first_name}" %></td>
-                </tr>
-                <tr>
-                    <td>フリガナ</td>
-                    <td><%= "#{@member.last_name_kana}　#{@member.first_name_kana}" %></td>
-                </tr>
-                <tr>
-                    <td>郵便番号</td>
-                    <td><%= @member.postal_code%></td>
-                </tr>
-                <tr>
-                    <td>住所</td>
-                    <td> <%= @member.address %> </td>
-                </tr>
-                <tr>
-                    <td>電話番号</td>
-                    <td><%= @member.telephone %></td>
-                </tr>
-                <tr>
-                    <td>メールアドレス</td>
-                    <td> <%= @member.email %></td>
-                </tr>
-            </tbody>
+        <thead></thead>
+        <tbody>
+            <tr>
+                <td><h5>顧客ID</h5></td>
+                <td>
+                    <%= @member.id %>
+                    <% if @member.is_deleted == false %>
+                        <span class= "label label-primary" >有効会員</span>
+                    <% else %>
+                        <span class= "label label-default" >退会済み</span>
+                    <% end %>
+                </td>
+            </tr>
+            <tr>
+                <td><h5>氏名</h5></td>
+                <td><%= "#{@member.last_name}　#{@member.first_name}" %></td>
+            </tr>
+            <tr>
+                <td><h5>フリガナ</h5></td>
+                <td><%= "#{@member.last_name_kana}　#{@member.first_name_kana}" %></td>
+            </tr>
+            <tr>
+                <td><h5>郵便番号</h5></td>
+                <td><%= @member.postal_code%></td>
+            </tr>
+            <tr>
+                <td><h5>住所</h5></td>
+                <td> <%= @member.address %> </td>
+            </tr>
+            <tr>
+                <td><h5>電話番号</h5></td>
+                <td><%= @member.telephone %></td>
+            </tr>
+            <tr>
+                <td><h5>メールアドレス</h5></td>
+                <td> <%= @member.email %></td>
+            </tr>
+        </tbody>
         <tfoot></tfoot>
     </table>
+</div>
+
+<div class='row'>
 <%= link_to '編集する', edit_admin_member_path(@member.id), class: 'btn btn-default' %>
 <%= link_to '注文履歴一覧', admin_orders_path(member_id: @member.id), class: 'btn btn-default' %>
+</div>
 
 
