--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,40 +1,39 @@
-<div class="container">
-	<h1>注文履歴一覧</h1>
+<h1>注文履歴一覧</h1>
 
-	<div class="row">
-		<div class="col-xs-10">
-			<table class="table table-hover table-bordered">
-				<thead>
+<div class="row">
+	<div class="col-xs-10">
+		<table class="table table-hover table-bordered">
+			<thead>
+				<tr>
+					<th>注文日</th>
+					<th>配送先</th>
+					<th>注文商品</th>
+					<th>支払金額</th>
+					<th>ステータス</th>
+					<th>注文詳細</th>
+				</tr>
+			</thead>
+			<tbody>
+				<% @orders.each do |order| %>
 					<tr>
-						<th>注文日</th>
-						<th>配送先</th>
-						<th>注文商品</th>
-						<th>支払金額</th>
-						<th>ステータス</th>
-						<th>注文詳細</th>
-					</tr>
-				</thead>
-				<tbody>
-					<% @orders.each do |order| %>
-						<tr>
-							<td>
-								<%= order.created_at.strftime('%Y/%m/%d') %>
-							</td>
-							<td>
-								<p><%= order.postal_code %></p>
-								<p><%= order.address %></p>
-								<p><%= order.receiver %></p>
-							</td>
-							<td>
-								<% order.order_products.each do |op| %>
-									<%= op.product.name %>
-								<% end %>
-							</td>
-							<td>
-								<%= number_to_currency(order.billing, :format => "%u%n", :unit => "￥", :precision => 0) %>
-							</td>
-							<td>
-								<% case order.status %>
+						<td>
+							<%= order.created_at.strftime('%Y/%m/%d') %>
+						</td>
+						<td>
+							<p><%= order.postal_code %></p>
+							<p><%= order.address %></p>
+							<p><%= order.receiver %></p>
+						</td>
+						<td>
+							<% order.order_products.each do |op| %>
+								<%= op.product.name %>
+							<% end %>
+						</td>
+						<td>
+							<%= number_to_currency(order.billing, :format => "%u%n", :unit => "￥", :precision => 0) %>
+						</td>
+						<td>
+							<% case order.status %>
 					            <% when 1 %>
 					                <%= "入金待ち" %>
 					            <% when 2 %>
@@ -45,22 +44,21 @@
 					                <%= "発送準備中" %>
 					            <% when 5 %>
 					                <%= "発送済み" %>
-					            <% end %>
-					        </td>
-							<td>
-								<%= link_to "表示する", admin_order_path(order.id), class: "btn btn-primary btn-block" %>
-							</td>
-						</tr>
-					<% end %>
-				</tbody>
-			</table>
-		</div>
+					        <% end %>
+					    </td>
+						<td>
+							<%= link_to "表示する", admin_order_path(order.id), class: "btn btn-primary btn-block" %>
+						</td>
+					</tr>
+				<% end %>
+			</tbody>
+		</table>
 	</div>
+</div>
 
-	<div class="row">
-    <div class="col-xs-8 col-xs-offset-2">
-      ページネーションあとで
-    </div>
-  </div>
-
+<div class="row">
+  <div class="col-xs-5"></div>
+  <div class="col-xs-6">
+     <%= paginate @orders %>
+   </div>
 </div>
