--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -3,7 +3,7 @@
 
         <div class="col-xs-4">
         <h1>商品詳細</h1>
-        <%= attachment_image_tag @product, :image, :limit, 300, 300, fallback: "no-image.png",size: "300x240" %>
+        <%= attachment_image_tag @product, :image, size: '300x240', fallback:"no_image.jpg",size:'300x240' %>
         </div>
 
         <div class="col-xs-5">
