--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,10 +1,12 @@
-
-
+<div class="row">
 <%= render 'layouts/error.message', model: @product %>
+    <h1>商品編集</h1>
+</div>
+<div classz-"row">
 
 <%= form_for @product, url: admin_product_path, method: :patch, class: "form-control" do |f| %>
     <div class="col-xs-4">
-        <h1>商品編集</h1>
+        
         
         <%= attachment_image_tag(@product, :image, size: "300x200") %>
         <br><br><br>
@@ -42,6 +44,7 @@
         </tr>
     </table>
     </div>
+</div>
     <div class="col-xs-3">
         <div class="product-edit">
             <%= f.submit "変更を保存", class:"btn btn-primary btn-sm" %> 
