--- a/app/views/member/products/show.html.erb
+++ b/app/views/member/products/show.html.erb
@@ -1,10 +1,11 @@
 
 <div class="container">
 <div class="row">
-    <div class="col-xs-3">
+    <div class="col-xs-4">
+        <%= attachment_image_tag @product, :image, size: '300x240', fallback:"no_image.jpg",size:'300x240' %>
     </div>
-    <div class="col-xs-3">
-    <p> <%= attachment_image_tag(@product, :image, size: "300x300") %></p>
+    <div class="col-xs-5 col-offset-3">
+    
     <p> <%= @product.name %> </p>
     <p> <%= @product.introduction %> </p>
     <p> <%= @product.genre.name %> </p>
@@ -15,15 +16,9 @@
 
     <%= form_for(@cart_product, url: cart_products_path) do |f| %>
         　<%= f.hidden_field :product_id, value: @product.id %>
-        　<%= f.number_field :quantity, placeholder: "個数選択",class: 'btn btn-default',min: 1 %>
-        　<%= f.submit 'カートにいれる',class: 'btn btn-primary' %>
+        　<p> <%= f.number_field :quantity, placeholder: "個数選択",class: 'btn btn-default',min: 1 %> </p>
+        　<p> <%= f.submit 'カートにいれる',class: 'btn btn-primary' %> </p>
         <% end %>
-
-
-
-
-
-
     </div>
 </div>
 </div>
