--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -6,7 +6,7 @@
  
    <%= f.attachment_field :image, class: "image" %>
 
-   <h4>title</h4>
+   <h4>商品名</h4>
    <%= f.text_field :name, class:"form-control" %>
 
    <h4>商品説明</4>
