--- a/app/views/member/destinations/edit.html.erb
+++ b/app/views/member/destinations/edit.html.erb
@@ -1,27 +1,31 @@
-<h2>配送先編集</h2>
+<div class="row">
+  <div class="col-xs-12">
+    <h2>配送先編集</h2>
 
-<%= render 'layouts/error.message', model: @destination %>
+    <%= render 'layouts/error.message', model: @destination %>
 
-<%= form_for(@destination) do |f| %>
+    <%= form_for(@destination) do |f| %>
 
-  <table class="table">
-    <tr>
-      <td>郵便番号(ハイフンなし)</td>
-      <td><%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %></td>
-      <td></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>住所</td>
-      <td colspan="2"><%= f.text_field :address, autofocus: true, autocomplete: "address", class: "col-xs-12" %></td>
-      <td></td>
-    </tr>
-    <tr>
-      <td>宛名</td>
-      <td><%= f.text_field :receiver, autofocus: true, autocomplete: "receiver" %></td>
-      <td></td>
-      <td><%= f.submit "編集する", class: "btn btn-default" %></td>
-    </tr>
-  </table>
+      <table class="table">
+        <tr>
+          <td>郵便番号(ハイフンなし)</td>
+          <td><%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>住所</td>
+          <td colspan="2"><%= f.text_field :address, autofocus: true, autocomplete: "address", class: "col-xs-12" %></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td>宛名</td>
+          <td><%= f.text_field :receiver, autofocus: true, autocomplete: "receiver" %></td>
+          <td></td>
+          <td><%= f.submit "編集する", class: "btn btn-default" %></td>
+        </tr>
+      </table>
 
-<% end %>
+    <% end %>
+  </div>
+</div>
