--- a/app/views/member/members/show.html.erb
+++ b/app/views/member/members/show.html.erb
@@ -1,38 +1,44 @@
-<h2>マイページ</h2>
+<div class="row">
+	<div class="col-xs-12">
 
-<h3>登録情報</h3>
-<%= link_to "編集する", edit_member_path(@member), class: "btn btn-default" %>
-<%= link_to "パスワードを変更する", edit_member_registration_path, class: "btn btn-default" %>
+		<h2>マイページ</h2>
 
-<table class="table">
-	<tr>
-		<th class="active col-xs-3">氏名</th>
-		<td class="col-xs-6"><%= @member.last_name %> <%= @member.first_name %></td>
-	</tr>
-	<tr>
-		<th class="active">カナ</th>
-		<td><%= @member.last_name_kana%> <%= @member.first_name_kana %></td>
-	</tr>
-	<tr>
-		<th class="active">郵便番号</th>
-		<td><%= @member.postal_code %></td>
-	</tr>
-	<tr>
-		<th class="active">住所</th>
-		<td><%= @member.address %></td>
-	</tr>
-	<tr>
-		<th class="active">電話番号</th>
-		<td><%= @member.telephone %></td>
-	</tr>
-	<tr>
-		<th class="active">メールアドレス</th>
-		<td><%= @member.email %></td>
-	</tr>
-</table>
+		<h3>登録情報</h3>
+		<%= link_to "編集する", edit_member_path(@member), class: "btn btn-default" %>
+		<%= link_to "パスワードを変更する", edit_member_registration_path, class: "btn btn-default" %>
 
-<h3>配送先</h3>
-<%= link_to "一覧を見る", destinations_path, class: "btn btn-default" %>
+		<table class="table">
+			<tr>
+				<th class="active col-xs-3">氏名</th>
+				<td class="col-xs-6"><%= @member.last_name %> <%= @member.first_name %></td>
+			</tr>
+			<tr>
+				<th class="active">カナ</th>
+				<td><%= @member.last_name_kana%> <%= @member.first_name_kana %></td>
+			</tr>
+			<tr>
+				<th class="active">郵便番号</th>
+				<td><%= @member.postal_code %></td>
+			</tr>
+			<tr>
+				<th class="active">住所</th>
+				<td><%= @member.address %></td>
+			</tr>
+			<tr>
+				<th class="active">電話番号</th>
+				<td><%= @member.telephone %></td>
+			</tr>
+			<tr>
+				<th class="active">メールアドレス</th>
+				<td><%= @member.email %></td>
+			</tr>
+		</table>
 
-<h3>注文履歴</h3>
-<%= link_to "一覧を見る", orders_path, class: "btn btn-default" %>
+		<h3>配送先</h3>
+		<%= link_to "一覧を見る", destinations_path, class: "btn btn-default" %>
+
+		<h3>注文履歴</h3>
+		<%= link_to "一覧を見る", orders_path, class: "btn btn-default" %>
+
+	</div>
+</div>
