--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -16,7 +16,7 @@
    <%= f.collection_select :genre_id, Genre.all, :id, :name %>
 
    <h4>税抜価格</h4>
-   <%= f.number_field :price, class:"form-control" %>円
+   <%= f.number_field :price,min:1, class:"form-control" %>円
    
    <h4>販売ステータス</h4>
    有効 <%= f.radio_button :is_valid, true %> 
