--- a/app/views/admin/products/new.html.erb
+++ b/app/views/admin/products/new.html.erb
@@ -8,7 +8,7 @@
        <%= f.attachment_field :image, class: "image" %>
     </div>
    <div class=" col-xs-offset-1 col-xs-8">
-      <h4>title</h4>
+      <h4>商品名</h4>
       <%= f.text_field :name, class:"form-control" %>
 
       <h4>商品説明</4>
